--- a/common/css/themes/dark/theme.css
+++ b/common/css/themes/dark/theme.css
@@ -13,6 +13,9 @@
   --obs-field-background-disable: #4c4c4c;
   --obs-field-border: none;
   --obs-panel-border: solid 1px #2f2f2f;
+  --obs-scrollbar-color: #4c4c4c;
+  --obs-scrollbar-thickness: 16px;
+  --obs-scrollbar-radius: 16px;
   --alt-preview-background: linear-gradient(135deg, rgba(31,30,31,1) 0%,
                                                     rgba(31,30,31,1) 8%,
                                                     rgba(29,28,29,1) 10%,
